# BevySnake

./: Cargo.toml  README.md  index.html  snake.js
src/: main.rs
