[package]
name = "bevy_snake"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
once_cell = "1.21.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
wasm-bindgen = "0.2"
